	and equipment from generic being.
	* src/resources/spritedef.cpp: Added filename to fatal error messages.
	* src/resources/iteminfo.cpp, src/resources/iteminfo.h,
	src/resources/itemdb.cpp, data/items.xml: Merged weapon_type and
	attacktype field.
	* src/resources/iteminfo.h, src/resources/itemdb.cpp: Removed unused
	slot field.

2007-10-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/viewport.h, src/gui/viewport.cpp: Put drawing of debug path
	into a private method.
	* po/LINGUAS, po/nl.po: Added Dutch translation (incomplete).

2007-10-01  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/item.cpp, src/gui/itemcontainer.cpp, src/resources/itemdb.cpp:
	Fixed inventory display so that empty slots are not unknown items.
	Adjusted "type" meaning to tmwserv one.
	* src/game.cpp: Fixed attacking with keyboard.

2007-09-25  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/gui/browserbox.cpp: Fix wrapping of UTF-8 multi-byte characters.

2007-09-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/inventory.h, src/inventory.cpp: Added some const qualifiers.

2007-09-22  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/browserbox.cpp: Removed some useless things.
	* src/logindata.h, src/gui/linkhandler.h, src/channelmanager.h,
	src/channelmanager.cpp, src/utils/minmax.h: Fixed missing includes and
	cleaned a bit.

2007-09-21  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/chat.cpp: Fixed resizing of chat window.

2007-09-21  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/CMakeLists.txt: Added new files to build, removed old files and
	added SDL_tff to the required libraries.
	* src/gui/truetypefont.h: Remove duplicated contents.
	* src/gui/browserbox.cpp: Refactor the way in which browser box text
	is drawn and wrapped.

2007-09-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/browserbox.cpp: Fixed missing const qualifier.
	* src/gui/windowlistener.h: Reduced warning about unused parameter.