@@ -20,4 +20,4 @@ src/gui/setup_audio.cpp
 src/gui/setup.cpp
 src/gui/setup_joystick.cpp
 src/gui/setup_video.cpp
-
+src/resources/itemdb.cpp
