@@ -23,6 +23,9 @@
 	attacktype field.
 	* src/resources/iteminfo.h, src/resources/itemdb.cpp: Removed unused
 	slot field.
+	* src/resources/itemdb.cpp: Added automatic generation of description
+	strings for item effects.
+	* po/POTFILES.in: Marked effect strings as translatable.
 
 2007-10-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
